fix ej 2 item iv guia 1

--- a/1-guia/ejercicios-1/ej-2-1.tex
+++ b/1-guia/ejercicios-1/ej-2-1.tex
@@ -6,7 +6,7 @@
       \item $3 \en A         $
       \item $\set{3} \subseteq A $
       \item $\set{3} \en A    $
-      \item $\set{\set{3}} \en A $
+      \item $\set{\set{3}} \subseteq A $
       \item $\set{1,2} \en A $
       \item $\set{1,2} \subseteq A  $
       \item $\set{\set{1,2}} \subseteq A  $
@@ -29,7 +29,7 @@ Muy parecido al ejercicio anterior.
 
     \item $\set{3} \en A    \to V$
 
-    \item $\set{\set{3}} \en A \to F$
+    \item $\set{\set{3}} \subseteq A \to V$
 
     \item $\set{1,2} \en A \to V$
 
@@ -51,4 +51,5 @@ Muy parecido al ejercicio anterior.
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/luxreduxdelux}{Juan Iglesias \github}
 \end{aportes}
