--- a/1-guia/ejercicios-1/ej-29-1.tex
+++ b/1-guia/ejercicios-1/ej-29-1.tex
@@ -63,6 +63,7 @@
             \draw[arista=Cerulean] (2) to (a);
             \draw[arista=Cerulean, bend right=10] (3) to (d);
             \draw[arista=Cerulean] (4) to (b);
+            \node[circle, draw, color=red, inner sep = 5pt, fill=red, opacity=0.1] at (5) {};
           \end{tikzpicture}
         $$
 
@@ -85,7 +86,7 @@
           \end{tikzpicture}
         $$
 
-  \item Es función.
+  \item Es función. Para cada valor de $a \en \enteros$ habrá algún $b \en \reales$ tal que $a = 2b -3$.
 
   \item No es función, $\sqrt{2} \norelacion b$ para ningún $b \en \naturales$ tal que $\sqrt{2} = 2b - 3$. Por lo tanto hay infinitos
         elementos en el conjunto $A$ que no se relacionan con el conjunto $B$.
